# Artify-Bharat

./: .gitignore  CLEANUP_SUMMARY.md  IMPLEMENTATION_GUIDE.md  README.md  package-lock.json  package.json
backend/: COMMANDS.md  create_categories.py  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_remove_user_username.py  0003_user_is_oauth_user_user_oauth_id_user_oauth_provider.py
backend/marketplace/: settings.py  urls.py
backend/store/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
backend/store/management/commands/: create_categories.py  seed.sql  seed_db.py
backend/store/migrations/: 0003_artisan_stats.py  0004_alter_product_artisan.py  0005_alter_product_slug.py  0006_artisan_craft_story.py  0006_product_lower_title_date_idx.py  0007_product_image_product_video_productasset_video_and_more.py  0007_rename_lower_title_date_idx_lower_title_idx.py  0008_alter_product_unit_price.py  0008_remove_product_lower_title_idx_product_title_idx.py  0009_artisan_profile_image.py  0010_merge_20260221_2315.py  0011_artisanverification.py
backend/store/tests/: conftest.py  test_collections.py  test_routes.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: AppLayout.js  ArtifyLogo.js  ArtisanSpotlight.js  ArtisanVerificationWizard.js  CraftStatsDisplay.js  FeaturedMasterpieces.js  FloatingMetalBadge.js  Footer.js  Header.js  HowItWorks.js  IndianCraftStories.js  LogoFavicon.js  MarketplaceSearchSolution.js  StateImageGallery.js  SwaggyLoader.js
frontend/data/: craftStories.js  mockData.js
frontend/pages/: _document.js  index.js  (+2 more)
microservices/: main.py  pyproject.toml  pytest.ini  requirements.txt
microservices/demo/: test_chatbot.py  test_search.py
microservices/tests/: test.py
microservices/utils/: chatbot.py  helper.py  search.py  story generation.py  story_generation.py  tools.py  transcription.py
(+32 files in other folders)
