[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.1",
    "django-debug-toolbar>=6.2.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "gunicorn>=24.1.1",
    "redis>=7.1.0",
]
